syntax = "proto3";

option java_multiple_files = true;
option java_package = "heating";
option java_outer_classname = "HeatingServiceImpl";

package heating;

service HeatingService {

    rpc changePower(PowerRequest) returns (PowerResponse) {}

    rpc changeTemperature(TemperatureRequest) returns (stream TemperatureResponse) {} 
}

message PowerRequest {
    bool state = 1;
}

message PowerResponse {
    bool state = 1;
}

message TemperatureRequest {
    int32 temp = 1;
}

message TemperatureResponse {
    int32 temp = 1;
}